# SamplePythonAgent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  architecture.md  calc_phi75.py  decay.py  docker-compose.yml  heat_rod.py  neutron.py  neutron_flux.py  plan.md  precise_calc.py  pyproject.toml  requirements.md  requirements.txt  solve.py  solve_decay.py  solve_flux.py  tasks.md
src/adversarial_agent/: llm.py  main.py
src/adversarial_agent/tools/: __init__.py  read_file.py  subagent.py  write_file.py
src/adversarial_agent/ui/: __init__.py  confirm.py  console.py  transcript.py
src/cmu_project/: __init__.py  config.py  conversation.py  events.py  main.py  prompts.py  runner.py
src/cmu_project/tools/: base.py  bash.py  edit_file.py
src/cmu_project/ui/: confirm.py  renderer.py
src/simulators/HeatConduction/: Dockerfile  (+1 more)
tests/: conftest.py  eval.py  linear_solver.py  test_conversation.py  test_events.py  test_llm.py  test_runner.py  test_tools.py  transcript_reader
transcripts/: HeatConduction_Q1.jsonl  HeatConduction_Q2.jsonl  HeatConduction_Q3.jsonl  HeatConduction_Q4.jsonl  HeatConduction_Q5.jsonl  NeutronDiffusion_Q1.jsonl  NeutronDiffusion_Q2.jsonl  NeutronDiffusion_Q3.jsonl  NeutronDiffusion_Q4.jsonl  RadioactiveDecay_Q1.jsonl  RadioactiveDecay_Q2.jsonl  RadioactiveDecay_Q3.jsonl  RadioactiveDecay_Q4.jsonl  RadioactiveDecay_Q5.jsonl  SeperableDiffEqs_Q1.jsonl  SeperableDiffEqs_Q2.jsonl  SeperableDiffEqs_Q3.jsonl  SeperableDiffEqs_Q4.jsonl  idealGasLaw_Q1.jsonl  idealGasLaw_Q2.jsonl  idealGasLaw_Q3.jsonl  idealGasLaw_Q4.jsonl
(+8 files in other folders)
